# interpretability_experiments

./: .gitignore  CLAUDE.md  README.md  deploy_to_remote.sh  install_and_generate.sh  pyproject.toml  remote_setup.sh  requirements-core.txt  requirements.txt  run_pipeline.sh  setup_venv.sh
.config/remote_backup/: 05_train_probes.py  05_train_probes_logistic_regression.py
experiments/: README.md
experiments/example_experiment/: README.md
gmsk8_generation/: README.md  annotate_dataset.py  gmsk8_download.py  requirements.txt
gmsk8_generation/annotation/: README.md  first_100_test_annotations.jsonl
gmsk8_generation_platinum/: download_gsm8k.py  gmsk8_download.py  operation_counts.json  process_dataset.py  regexp_utils.py  split_dataset.py
gmsk8_generation_platinum/annotation/: README.md  first_100_test_examples.json  first_100_test_examples.jsonl
gmsk8_generation_platinum/dataset_preparation/: 1_download.py  2_split.py  3_enhance.py  4_tokenize.py  regexp_utils.py
linear_probes/: 01_generate_responses.py  02_analyze_responses.py  03_filter_probeable.py  04_POC_extract_hidden_states.py  04_extract_hidden_states.py  05_POC_train_probes.py  05_train_probes.py  05_train_probes_logistic_regression.py  benchmark_batch_size.py  run_analysis.sh
linear_probes/old/: 03_extract_probe_hidden_states.py  04_probe_dataset.py  05_llm_annotate.py  07_gemini_annotate.py  (+3 more)
planning/: PLAN_POC.md  PROBES.md  additions.md  goals.md  plan.md  plan2.md  probe_results_so_far.md
rl/: callbacks.py  rewards.py  run_grpo_training.sh  train_grpo.py
scripts/: start_annotation.sh
(+25 files in other folders)
