[project]
name = "interpretability-experiments"
version = "0.1.0"
description = "Collection of interpretability experiments for AI/ML models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interpretability_experiments"]
